First working implementation of scrolling floors

--- a/Flappy Birds WFA/Flappy Birds WFA.csproj
+++ b/Flappy Birds WFA/Flappy Birds WFA.csproj
@@ -9,4 +9,33 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Resources\bird.png" />
+    <None Remove="Resources\ground.png" />
+    <None Remove="Resources\pipe.png" />
+    <None Remove="Resources\pipedown.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\bird.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\pipe.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\pipedown.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.ServiceModel.Primitives" Version="10.0.652802" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\ground.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
